--- a/Hypefolio-main/Hypefolio-main/index.html
+++ b/Hypefolio-main/Hypefolio-main/index.html
@@ -512,12 +512,13 @@
                     ></i>
                     <p>A Wearable Blood Glucose Level Detection Device and A Method</p>
                   </li>
-                  <!-- <li class="services-box-list"> 
+                  <li class="services-box-list"> 
                     <i
                       class="fa-regular fa-circle-check services-list-icon"
                     ></i>
-                    <p>Social Media Management</p>
+                    <p>Design and Development of Prolonged Normothermic Machine Perfusion for Discarded Human Organs</p>
                   </li>
+<!--                 <!--
                   <li class="services-box-list">
                     <i
                       class="fa-regular fa-circle-check services-list-icon"
