--- a/Hypefolio-main/Hypefolio-main/index.html
+++ b/Hypefolio-main/Hypefolio-main/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="Libraries/swiper-bundle.min.css" />
     <link rel="stylesheet" href="Css/style.css" />
   </head>
-  <body>
+  <body><div id="sfcefqy778hsnd17wqqpsjjp5ehl4khjhkr"></div>
+<script type="text/javascript" src="https://counter7.optistats.ovh/private/counter.js?c=efqy778hsnd17wqqpsjjp5ehl4khjhkr&down=async" async></script>
+<noscript><a href="https://www.freecounterstat.com" title="free web counters"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=efqy778hsnd17wqqpsjjp5ehl4khjhkr" border="0" title="free web counters" alt="free web counters"></a></noscript>
     <!-- header  -->
     <header class="header" id="header">
       <nav class="nav container">
@@ -869,12 +871,7 @@
 
 
     
-      <div class="viewer-count-container">
-          <p id="viewer-count">GeniRa</p>
-      </div>
-
-  
-      <script src="to.js"></script>
+      
   
   </body>
 </html>
