--- a/Hypefolio-main/Hypefolio-main/index.html
+++ b/Hypefolio-main/Hypefolio-main/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="https://counter7.optistats.ovh/private/counter.js?c=efqy778hsnd17wqqpsjjp5ehl4khjhkr&down=async" async></script>
 <noscript><a href="https://www.freecounterstat.com" title="free web counters"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=efqy778hsnd17wqqpsjjp5ehl4khjhkr" border="0" title="free web counters" alt="free web counters"></a></noscript>
     <!-- header  -->
+    <a href="https://www.freecounterstat.com" title="web counter"><img src="https://counter7.optistats.ovh/private/freecounterstat.php?c=w932546zclur8g24dddstpza1rlsftp2" border="0" title="web counter" alt="web counter"></a>
     <header class="header" id="header">
       <nav class="nav container">
         <a href="#" class="nav-logo">Subash P</a>
